# star-snow-notes

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README  README.md  config.status  configure  configure.in  install-data.sh
.star-snow-notes/: ssn-conf.txt
.star-snow-notes/graph/_default/: ssn-graph-conf.txt
.star-snow-notes/graph/_itokawa/: ssn-graph-conf.txt
autom4te.cache/: output.1  requests  traces.0  traces.1
man/: Makefile  Makefile.am  Makefile.in  star-snow-notes.en  star-snow-notes.jp
src/: Button.cpp  Button.h  ControlPanel.cpp  ControlPanel.h  FileList.cpp  FileList.h  GameMain.h  Makefile  Makefile.am  Makefile.in  Music.cpp  Music.h  Option.cpp  Option.h  Space.cpp  Space.h  Star.cpp  Star.h  config.h  config.h.in  main.cpp
src/.deps/: Button.Po  ControlPanel.Po  FileList.Po  Music.Po  Option.Po  Space.Po  Star.Po  main.Po
